--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,19 +8,19 @@
 
     <application
         android:name=".Instademo"
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.InstaDemo"
-        tools:targetApi="31">
-        <activity
-            android:name=".post.add_post1"
-            android:exported="false" />
+        tools:targetApi="31"
+        android:logo="@drawable/icon">
+
         <activity
             android:name=".post.add_post"
             android:exported="false" />
