--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,19 +7,23 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <queries>
+
         <!-- Email apps -->
         <intent>
             <action android:name="android.intent.action.SENDTO" />
+
             <data android:scheme="mailto" />
         </intent>
 
         <!-- Browsers (for GitHub link) -->
         <intent>
             <action android:name="android.intent.action.VIEW" />
+
             <data android:scheme="http" />
         </intent>
         <intent>
             <action android:name="android.intent.action.VIEW" />
+
             <data android:scheme="https" />
         </intent>
     </queries>
@@ -31,46 +35,40 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:logo="@drawable/icon"
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.InstaDemo"
         tools:targetApi="31">
-
+        <activity android:name=".fullscreenmediaActivity"
+            android:exported="true" />
         <activity
             android:name=".Instademo"
             android:exported="true" />
-
         <activity
             android:name=".Aboutus"
             android:exported="false" />
-
         <activity
             android:name=".post.add_post"
             android:exported="false" />
-
         <activity
             android:name=".post.add_reels"
             android:exported="false" />
-
         <activity
             android:name=".HomeActivity"
             android:exported="true"
-            android:label="@string/app_name" />
-
+            android:label="@string/home_activity_label" />
         <activity
             android:name=".signUp"
             android:exported="false" />
-
         <activity
             android:name=".signIn"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".SplashScreen"
             android:exported="false" />
