duel photo feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.InstaDemo"
         tools:targetApi="31">
-        <activity android:name=".fullscreenmediaActivity"
+        <activity
+            android:name=".PhotoDuelActivity"
+            android:exported="true" >
+<!--            <intent-filter>-->
+<!--            <action android:name="android.intent.action.MAIN" />-->
+
+<!--            <category android:name="android.intent.category.LAUNCHER" />-->
+<!--        </intent-filter>-->
+        </activity>
+        <activity
+            android:name=".fullscreenmediaActivity"
             android:exported="true" />
         <activity
             android:name=".Instademo"
